--- a/tests/old-yamls/minikube/pv-pvc.yml
+++ b/tests/old-yamls/minikube/pv-pvc.yml
@@ -8,7 +8,7 @@ spec:
   accessModes:
     - ReadWriteMany
   nfs:
-    server: nfs-server.default.svc.cluster.local
+    server: 10.100.235.240
     path: "/"
 ---
 kind: PersistentVolumeClaim
