--- a/efs-helm/csi-driver/ad1.yml
+++ b/efs-helm/csi-driver/ad1.yml
@@ -7,11 +7,11 @@ spec:
   - name: app1
     image: busybox
     command: ["/bin/sh"]
-    args: ["-c", "while true; do echo $(date -u) >> /data/out2.txt; sleep 15; done"]
+    args: ["-c", "while true; do sleep 15; done"]
     volumeMounts:
     - name: persistent-storage
-      mountPath: /data
+      mountPath: /randomshit
   volumes:
   - name: persistent-storage
     persistentVolumeClaim:
-      claimName: efs-claim
+      claimName: nfs
