--- a/tests/old-yamls/cluster/hyperflow-engine-deployment.yml
+++ b/tests/old-yamls/cluster/hyperflow-engine-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: hyperflow
-        image: hyperflowwms/hyperflow:v1.5.6
+        image: hyperflowwms/hyperflow:v1.5.7
         imagePullPolicy: Always
         resources:
           requests:
@@ -49,9 +49,13 @@ spec:
         - name: HF_VAR_STOP_WORKFLOW_WHEN_JOB_FAILED
           value: "1"
         - name: HF_VAR_CPU_REQUEST
-          value: "0.7"
+          value: "0.7" # change for experiments
         - name: HF_VAR_MEM_REQUEST
-          value: "500Mi"
+          value: "500Mi" # change for experiments
+        - name: HF_VAR_SCHEDULER_SERVICE_HOST
+          value: "10.100.0.214"
+        - name: HF_VAR_DRY_RUN
+          value: 1
         - name: HF_VAR_NAMESPACE
           valueFrom:
             fieldRef:
