--- a/tests/old-yamls/cluster/cm.yml
+++ b/tests/old-yamls/cluster/cm.yml
@@ -21,6 +21,8 @@ data:
                   env:
                    #- name: HF_VAR_ENABLE_NETHOGS
                       #value: "0"
+                    - name: HF_VAR_DRY_RUN
+                      value: "1" # to update for experiments
                     - name: HF_VAR_WORK_DIR
                       value: "${volumePath}"
                     - name: HF_VAR_WAIT_FOR_INPUT_FILES
@@ -73,7 +75,7 @@ data:
                   - name: my-pvc-nfs
                     mountPath: ${volumePath}
                 nodeSelector:
-                  nodetype: worker
+                  nodetype: ${nodeSelector}
                 volumes:
                 - name: workflow-data
                   emptyDir: {}
