--- a/tests/old-yamls/cluster/hyperflow-engine-deployment.yml
+++ b/tests/old-yamls/cluster/hyperflow-engine-deployment.yml
@@ -36,7 +36,7 @@ spec:
         - name: HF_VAR_JOB_TEMPLATE_PATH
           value: "/opt/hyperflow/job-template.yaml"
         - name: HF_VAR_WORKER_CONTAINER
-          value: "hyperflowwms/soykb-workflow-worker:v1.0.10-1-g95b7caf"
+          value: "hyperflowwms/soykb-worker" # "hyperflowwms/soykb-workflow-worker:v1.0.10-1-g95b7caf"
           #value: "cano601/soykb-workflow:latest" # SoyKB with file block access monitoring
           #value: "matplinta/montage-workflow-worker:exec1.0.13"
           #value: "hyperflowwms/montage2-worker"
