--- a/tests/old-yamls/cluster/parser-job.yml
+++ b/tests/old-yamls/cluster/parser-job.yml
@@ -33,7 +33,7 @@ spec:
           - name: workflow-data
             mountPath: "/work_dir:shared"
       nodeSelector:
-        nodetype: worker   
+        nodetype: hfmaster   
       volumes:
       - name: workflow-data
         persistentVolumeClaim:
