--- a/tests/old-yamls/cluster/viz-trace-job.yml
+++ b/tests/old-yamls/cluster/viz-trace-job.yml
@@ -43,6 +43,8 @@ spec:
         volumeMounts:
            - name: workflow-data
              mountPath: "/work_dir:shared"
+      nodeSelector:
+        nodetype: hfmaster
       volumes:
       - name: workflow-data
         persistentVolumeClaim:
