--- a/tests/old-yamls/cluster/parser-job.yml
+++ b/tests/old-yamls/cluster/parser-job.yml
@@ -13,7 +13,7 @@ spec:
       containers:
       - name: parser
         image: hyperflowwms/log-parser:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         resources:
           requests:
             cpu: 0 
