--- a/eks-config-m5.yml
+++ b/eks-config-m5.yml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: dev-cluster-1
+  name: dev-cluster-2
   region: us-east-1
 
 nodeGroups:
@@ -11,18 +11,17 @@ nodeGroups:
     instanceType: m5.xlarge
     desiredCapacity: 1
   - name: hyperflow-worker-1
-    labels: { nodetype: worker1 }
+    labels: { nodetype: worker }
     instanceType: m5.xlarge
     desiredCapacity: 1
   - name: hyperflow-worker-2
-    labels: { nodetype: worker2 }
-    instanceType: m5a.xlarge
+    labels: { nodetype: worker }
+    instanceType: m5.xlarge
     desiredCapacity: 1
   # - name: hyperflow-worker-3
-  #   labels: { nodetype: worker3 }
+  #   labels: { nodetype: worker }
   #   instanceType: m5.xlarge
   #   desiredCapacity: 1
   # - name: hyperflow-worker-4
-  #   labels: { nodetype: worker4 }
+  #   labels: { nodetype: worker }
   #   instanceType: m5.xlarge
-  #   desiredCapacity: 1
