--- a/eks-config-m5a.yml
+++ b/eks-config-m5a.yml
@@ -2,8 +2,10 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: dev-cluster-1
+  name: dev-cluster-3
   region: us-east-1
+
+availabilityZones: ["us-east-1d",  "us-east-1f"]
 
 nodeGroups:
   - name: hyperflow-engine
@@ -11,18 +13,17 @@ nodeGroups:
     instanceType: m5.xlarge
     desiredCapacity: 1
   - name: hyperflow-worker-1
-    labels: { nodetype: worker1 }
-    instanceType: m5.xlarge
+    labels: { nodetype: worker }
+    instanceType: m5a.xlarge
     desiredCapacity: 1
   - name: hyperflow-worker-2
-    labels: { nodetype: worker2 }
+    labels: { nodetype: worker }
     instanceType: m5a.xlarge
     desiredCapacity: 1
   # - name: hyperflow-worker-3
-  #   labels: { nodetype: worker3 }
-  #   instanceType: m5.xlarge
+  #   labels: { nodetype: worker }
+  #   instanceType: m5a.xlarge
   #   desiredCapacity: 1
   # - name: hyperflow-worker-4
-  #   labels: { nodetype: worker4 }
-  #   instanceType: m5.xlarge
-  #   desiredCapacity: 1
+  #   labels: { nodetype: worker }
+  #   instanceType: m5a.xlarge
