--- a/tests/old-yamls/cluster/cm.yml
+++ b/tests/old-yamls/cluster/cm.yml
@@ -18,11 +18,10 @@ data:
                 containers:
                 - name: test
                   image: ${containerName}
+                  imagePullPolicy: IfNotPresent
                   env:
                    #- name: HF_VAR_ENABLE_NETHOGS
                       #value: "0"
-                    - name: HF_VAR_DRY_RUN
-                      value: "1" # to update for experiments
                     - name: HF_VAR_WORK_DIR
                       value: "${volumePath}"
                     - name: HF_VAR_WAIT_FOR_INPUT_FILES
