--- a/tests/old-yamls/cluster/viz-trace-job.yml
+++ b/tests/old-yamls/cluster/viz-trace-job.yml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: parser
         image: hyperflowwms/viz-trace:v1.0.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: HF_VAR_DEBUG
           value: "0"
