--- a/tests/old-yamls/cluster/nfs-server.yml
+++ b/tests/old-yamls/cluster/nfs-server.yml
@@ -40,6 +40,7 @@ spec:
       - name: workflow-data
         # image: hyperflowwms/soykb-workflow-data:hyperflow-soykb-example-f6f69d6ca3ebd9fe2458804b59b4ef71
         image: hyperflowwms/montage2-workflow-data:montage2-2mass-025-latest
+        # image: matplinta/montage2-workflow-data:degree1.0
         # image: hyperflowwms/montage2-workflow-data:montage2-3.0-latest
         imagePullPolicy: IfNotPresent
         command:
